After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 581461 - gif loader fails if write it consumes less than 13 bytes at start
gif loader fails if write it consumes less than 13 bytes at start
Status: RESOLVED FIXED
Product: gdk-pixbuf
Classification: Platform
Component: loaders
git master
Other Linux
: Normal normal
: ---
Assigned To: gdk-pixbuf-maint
gdk-pixbuf-maint
Depends on:
Blocks:
 
 
Reported: 2009-05-05 12:52 UTC by Andrey Tsyvarev
Modified: 2014-10-24 11:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test for loading image via gdk_pixbuf_loader_write() (2.27 KB, text/plain)
2009-05-05 12:59 UTC, Andrey Tsyvarev
Details
image for test (34.65 KB, image/gif)
2009-05-05 13:01 UTC, Andrey Tsyvarev
Details

Description Andrey Tsyvarev 2009-05-05 12:52:39 UTC
While loading image in gif format using gdk_pixbuf_loader_write(), the second call of this function returns FALSE if size of the first portion of passed data is shorter than 13 bytes.

This bug appears only when one uses the loader created with gdk_pixbuf_loader_new_with_type("gif", NULL). If one uses the loader created with gdk_pixbuf_loader_new(), everything becomes correct.
Comment 1 Andrey Tsyvarev 2009-05-05 12:59:59 UTC
Created attachment 134021 [details]
test for loading image via gdk_pixbuf_loader_write()

This program simplify testing progressive image loading.
Comment 2 Andrey Tsyvarev 2009-05-05 13:01:00 UTC
Created attachment 134022 [details]
image for test
Comment 3 Bastien Nocera 2014-10-22 14:02:13 UTC
Reproduced with gdk-pixbuf 2.31.
Comment 4 Bastien Nocera 2014-10-24 11:50:21 UTC
commit 0da968fd5f1c5f8b05f4549be6bf77fe2f1daa62
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Oct 24 13:48:17 2014 +0200

    tests: Add test case for short GIF writes
    
    Based on the test program from Andrey Tsyvarev <tsyvarev@ispras.ru>
    
    https://bugzilla.gnome.org/show_bug.cgi?id=581461

commit 692b0ceaf032be2cd2558396c2b74a64869048d5
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Oct 24 12:34:22 2014 +0200

    gif: Fix loading GIF if first write is smaller than 13 bytes
    
    https://bugzilla.gnome.org/show_bug.cgi?id=581461