gif: Fix loading GIF if first write is smaller than 13 bytes

https://bugzilla.gnome.org/show_bug.cgi?id=581461